# window-management-client-grpc

./: meson.build
src/: AglShellGrpcClient.cpp  AglShellGrpcClient.h  agl_shell.proto  main.cpp  meson.build
src/qml/: Main.qml
src/qml/images/: images.qrc
